--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,21 @@
-body {
+@import url('https://fonts.googleapis.com/css2?family=Teko:wght@700&display=swap');
+*{
+  padding: 0;
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
-}
+  box-sizing: border-box;
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+}
+h1, h2, h3{
+  font-family: 'Teko', sans-serif;
+}
+.myslider2{
+  display: none;
+}
+@media screen and (max-width:800px){
+  .myslider1{
+      display: none;
+  }
+  .myslider2{
+      display: block;
+  } 
 }
